<resources>
    <string name="app_name">Histo</string>
    <string name="description_logo">App logo</string>
    <string name="description_ifam">Logo IFAM</string>
    <string name="abrir_menu">Abrir</string>
    <string name="fechar_menu">Fechar</string>
    <string name="title_activity_tela_principal">Tela Principal</string>
    <string name="conteudo_programatico">Conteúdo Programático</string>
    <string name="configuracoes">Configurações</string>
    <string name="ajuda">Ajuda</string>
    <string name="legal">Legal</string>
    <string name="inicio">Início</string>
    <string name="modo_estudo">Modo Estudo</string>
    <string name="modo_quiz">Modo Quiz</string>
    <string name="habilitar_tela_bloqueio">Selecione para habilitar o modo na tela de bloqueio</string>
    <string name="pontuacao_inicial">Pontos: 0</string>
    <string name="perguntas">Pergunta: 1/X</string>
    <string name="tempo">00:30</string>
    <string name="confirmar">Confirmar</string>
    <string name="proxima">Próxima</string>
    <string name="lbl_titulo">Opções do Quiz</string>
    <string name="lbl_num_perguntas">Número de perguntas:</string>
    <string name="lbl_btn_iniciar">Iniciar Quiz</string>
    <string name="lbl_assunto">Assunto:</string>
    <string name="lbl_ultimo_resultado">Pontos do último quiz:</string>
    <string name="hint_filtro_conteudo">Procurar por conceito</string>
    <string name="hint_filtro_assunto">Procurar por assunto</string>
    <string name="lbl_btn_anterior">Anterior</string>
    <string name="lbl_btn_proximo">Próximo</string>
    <string name="menu_navegacao">Menu de navegação</string>


    <string name="alunos">Alunos</string>
    <string name="victor">Victor de Castro Farias</string>
    <string name="reully">Reully Mary</string>
    <string name="silvia">Silvia Celina</string>
    <string name="professora">Professora/Orientadora</string>
    <string name="professora_nome">Letícia de Oliveira Rosa</string>
    <string name="desenvolvedor">Desenvolvedor</string>
    <string name="ano">2018</string>
    <string name="desenvolvedor_nome">Igor Carvalho Costa</string>
    <string name="lbl_assuntos_ativos">Assuntos ativos no Modo Quiz e Estudo:</string>
    <string name="lbl_tamanho_fonte">Tamanho da fonte:</string>
    <string name="lbl_cor_fonte">Cor da fonte:</string>
    <string name="lbl_btn_salvar">Salvar</string>

    <string-array name="arr_str_tamanho_fonte">
        <item>Pequena</item>
        <item>Padrão</item>
        <item>Média</item>
        <item>Grande</item>
    </string-array>
</resources>
