<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_item_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_item_conteudo_programatico"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/conteudo_programatico" />

        <item
            android:id="@+id/nav_item_configuracoes"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/configuracoes" />

        <item
            android:id="@+id/nav_item_ajuda"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/ajuda" />

        <item
            android:id="@+id/nav_item_legal"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/legal" />
    </group>
</menu>