<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Interface.Splash">

    <ImageView
        android:id="@+id/img_logo_app"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/description_logo"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_app_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAppearance="@style/AppTheme.lbl_black"
        app:layout_constraintEnd_toEndOf="@+id/img_logo_app"
        app:layout_constraintStart_toStartOf="@+id/img_logo_app"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_app" />

    <ImageView
        android:id="@+id/img_logo_ifam"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_ifam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lbl_app_nome"
        app:layout_constraintStart_toStartOf="@+id/lbl_app_nome"
        app:layout_constraintTop_toBottomOf="@+id/lbl_app_nome"
        app:layout_constraintVertical_bias="0.979"
        app:srcCompat="@drawable/logo_ifam" />


</android.support.constraint.ConstraintLayout>