<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/lbl_assuntos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_assuntos_ativos"
                android:textAppearance="@style/AppTheme.txt" />

            <ListView
                android:id="@+id/list_assuntos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

            <TextView
                android:id="@+id/lbl_tamanho_fonte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_tamanho_fonte"
                android:textAppearance="@style/AppTheme.txt" />

            <Spinner
                android:id="@+id/spinner_font_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/arr_str_tamanho_fonte" />

            <Button
                android:id="@+id/btn_salvar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/formato_botao_verde"
                android:text="@string/lbl_btn_salvar"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_nav" />
</android.support.v4.widget.DrawerLayout>